--- a/models/model_config.json
+++ b/models/model_config.json
@@ -1,7 +1,8 @@
 {
-    "lr": 0.002202573698583079,
+    "lr": 0.0009949550518858511,
     "d_model": 256,
-    "n_layers": 5,
+    "n_layers": 2,
     "n_heads": 4,
-    "batch_size": 32
+    "batch_size": 32,
+    "lambda_recon": 85.37397580829814
 }
