--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas>=1.4.0
 scikit-learn>=1.1.0
 torchvision>=0.13.0
 transformers>=4.20.0
-TA-Lib>=0.4.25
+pandas-ta
 scipy>=1.8.0
 requests>=2.28.0
 urllib3>=1.26.0
@@ -30,4 +30,4 @@ GPUtil>=1.4.0
 psutil>=5.9.0
 dtaidistance>=2.3.10
 pyts>=0.12.0
-grad-cam>=1.5.0
+grad-cam>=1.5.0xgboost
